--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
     "mysql": "^2.18.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "socket.io": "^4.7.2"
   },
-  "devDependencies": {},
   "description": ""
 }
