--- a/socket/package.json
+++ b/socket/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@socket.io/admin-ui": "^0.5.1",
+    "cors": "^2.8.5",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2"
   }
